--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "test:e2e": "jest --config ./e2e/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.363.0",
+    "@aws-sdk/s3-presigned-post": "^3.363.0",
     "@nestjs/common": "9.4.3",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "9.4.3",
