--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/swagger": "^7.0.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "mongodb": "^6.3.0",
     "nestjs-pino": "^3.5.0",
     "pino-http": "^8.5.1",
     "pino-pretty": "^10.2.3",
@@ -43,6 +44,7 @@
     "@nestjs/testing": "9.4.3",
     "@types/express": "4.17.17",
     "@types/jest": "29.5.2",
+    "@types/multer": "^1.4.11",
     "@types/node": "18.16.18",
     "@types/supertest": "2.0.12",
     "@typescript-eslint/eslint-plugin": "5.59.11",
